# yatube_project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
yatube/: .env.example
yatube/about/: tests.py  views.py
yatube/api/: permissions.py  serializers.py  urls.py  views.py
yatube/core/: tests.py  views.py
yatube/core/context_processors/: year.py
yatube/core/templatetags/: user_filters.py
yatube/gunicorn/: gunicorn.service
yatube/nginx/: default.conf
yatube/posts/: admin.py  forms.py  models.py  urls.py  views.py
yatube/posts/migrations/: 0001_initial.py  0002_group_alter_post_pub_date_post_group.py  0003_alter_post_author_alter_post_group_and_more.py  0004_alter_post_options_post_image.py  0005_comment.py  0006_alter_comment_created_alter_comment_text_follow.py  0007_rename_author_follow_following.py
yatube/posts/tests/: test_forms.py  test_models.py  test_urls.py  test_view.py  test_views.py
yatube/templates/: base.html
yatube/templates/about/: author.html  tech.html
yatube/templates/core/: 403.html  403csrf.html  404.html
yatube/templates/includes/: field_in_form.html  footer.html  form_errors.html  header.html
yatube/templates/posts/: create_post.html  follow.html  group_list.html  index.html  post_detail.html  profile.html
yatube/templates/users/: base_users.html  logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  signup.html  (+2 more)
yatube/users/: forms.py  urls.py  views.py
yatube/yatube/: asgi.py  settings.py  urls.py  wsgi.py
(+9 files in other folders)
